style.css
/* ... */
.hex-card:hover::before {
  opacity: 1;
}

/* 3 columns */
@media (min-width: 800px) {
  .hex-grid { max-width: 790px; } /* 3 * (340 - 82) + margin offset */
  .hex-card:nth-child(3n+2) {
    margin-top: 151px; /* 294/2 + 4px */
  }
}

/* 2 columns */
@media (max-width: 799px) and (min-width: 550px) {
  .hex-grid { max-width: 530px; }
  .hex-card:nth-child(2n+2) {
    margin-top: 151px;
  }
}

/* 1 column */
@media (max-width: 549px) {
  .hex-grid { max-width: 340px; padding-bottom: 2rem; }
  .hex-card { margin: 4px auto; padding: 2.5rem 3rem; clip-path: polygon(15% 0%, 85% 0%, 100% 50%, 85% 100%, 15% 100%, 0% 50%); }
}

